--- a/test-8.html
+++ b/test-8.html
@@ -98,16 +98,16 @@
     <section class="article main-con flex flex-dir-col">
         <div class="article__title-bar flex flex-jc-s-bet flex-ai-c">
             <div class="article_id flex-basis-50px">8</div>
-            <div class="article_title flex-grow-1">제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트</div>
+            <div class="article_title flex-grow-1">제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물</div>
             <div class="article_writer flex-basis-100px"><i class="fas fa-user"></i>이명학
             </div>
-            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2020-12-21 22:26:06
+            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2020-12-21 23:02:49
             </div>
             <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>0</div>
             <div class="article_recommend flex-basis-50px"><i
                     class="fas fa-thumbs-up"></i>0</div>
         </div>
-        <div id="viewer" class="article_body flex-grow-1">13123</div>
+        <div id="viewer" class="article_body flex-grow-1">제목이 긴 게시물 </div>
 
         <div id="disqus_thread"></div>
         <script>
@@ -144,7 +144,7 @@
                 <tr>
                     <td colspan="6" class="line-separate"></td>
                 </tr>
-                <tr><td colspan="6" class ="line-separate"></td></tr><tr><td class="cell-id"> &gt; </td><td class="cell-title"><a href="test-8.html">제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-21 22:26:06</td><td class="cell-hit">0</td><td class="cell-recommend">0</td></tr>
+                <tr><td colspan="6" class ="line-separate"></td></tr><tr><td class="cell-id"> &gt; </td><td class="cell-title"><a href="test-8.html">제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-21 23:02:49</td><td class="cell-hit">0</td><td class="cell-recommend">0</td></tr>
             </table>
         </section>
         <div class="main-con flex-grow-1"></div>
