--- a/test-list-1.html
+++ b/test-list-1.html
@@ -110,7 +110,7 @@
             <tr>
                 <td colspan="6" class="line-separate"></td>
             </tr>
-            <tr><td colspan="6" class ="line-separate"></td></tr><tr><td class="cell-id">8</td><td class="cell-title"><a href="test-8.html">제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트제목이 긴 게시물 테스트</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-21 22:26:06</td><td class="cell-hit">0</td><td class="cell-recommend">0</td></tr>
+            <tr><td colspan="6" class ="line-separate"></td></tr><tr><td class="cell-id">8</td><td class="cell-title"><a href="test-8.html">제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물 제목이 긴 게시물</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-21 23:02:49</td><td class="cell-hit">0</td><td class="cell-recommend">0</td></tr>
         </table>
     </section>
     <div class="main-con flex-grow-1"></div>
