--- a/guestbook-list-1.html
+++ b/guestbook-list-1.html
@@ -103,7 +103,9 @@
         <div class="guestbook-list__table flex flex-dir-col">           
 
 
-            <div class="flex"><div class="guestbook-writer">이명학</div><div class="flex-grow-1 guestbook-title">“좋은 프로그래머 대부분은 돈이나 대중에게 받을 찬사를 기대하고 프로그래밍을 하지 않고 프로그래밍이 재미 있어서 한다.”</div><div class="guestbook-regDate">2020-12-22 08:29:37</div></div><div class="flex"><div class="guestbook-writer">이명학</div><div class="flex-grow-1 guestbook-title">“최고의 프로그래머란 조금 낫다기 보다는 그냥 좋은 존재이다. 그들은 개념 창의성, 속도, 설계의 독창성, 문제 해결 능력 중 어떤 기준으로 측정하든 10배나 낫다. ”
+            <div class="flex"><div class="guestbook-writer">이명학</div><div class="flex-grow-1 guestbook-title">“좋은 프로그래머 대부분은 돈이나 대중에게 받을 찬사를 기대하고 프로그래밍을 하지 않고 프로그래밍이 재미 있어서 한다.”
+
+- Linus Torvalds</div><div class="guestbook-regDate">2020-12-22 08:29:37</div></div><div class="flex"><div class="guestbook-writer">이명학</div><div class="flex-grow-1 guestbook-title">“최고의 프로그래머란 조금 낫다기 보다는 그냥 좋은 존재이다. 그들은 개념 창의성, 속도, 설계의 독창성, 문제 해결 능력 중 어떤 기준으로 측정하든 10배나 낫다. ”
 
 - Randall E. Stross</div><div class="guestbook-regDate">2020-12-22 08:27:56</div></div><div class="flex"><div class="guestbook-writer">이명학</div><div class="flex-grow-1 guestbook-title">안녕하세요.</div><div class="guestbook-regDate">2020-12-22 08:26:08</div></div><div class="flex"><div class="guestbook-writer">이명학</div><div class="flex-grow-1 guestbook-title">방명록입니다.</div><div class="guestbook-regDate">2020-12-22 08:25:07</div></div>
 
