--- a/guestbook-list-2.html
+++ b/guestbook-list-2.html
@@ -44,7 +44,7 @@
                 <li><a class="flex flex-jc-c flex-ai-c height-100p" href="">BOARD </a> 
                        <div class="side-bar__menu-box2 width-100p">
                         <ul class="width-100p">
-                            <li><a href="it-list-1.html"><span>IT게시판</span></a></li><li><a href="test-list-1.html"><span>테스트게시판</span></a></li>
+                            <li><a href="it-list-1.html"><span>IT게시판</span></a></li>
                         </ul>  
                     </div>                
                 </li>
@@ -75,11 +75,11 @@
                         <li><a class="height-100p" href="">BOARD</a>                            
                             <div class="con-min-width menu-box2">
                                 <div class="flex con">
-                                    <div class="flex-grow-1"></div>
-                                <ul>
-                                    <li><a href="it-list-1.html"><span>IT게시판</span></a></li><li><a href="test-list-1.html"><span>테스트게시판</span></a></li>
-                                </ul>
+                                    <div class="flex-grow-1"></div>                                
                             </div>
+                            <ul>
+                                <li><a href="it-list-1.html"><span>IT게시판</span></a></li>
+                            </ul>
                             </div>
                         </li>
                         <li><a class="height-100p" href="guestbook-list-1.html">GUESTBOOK</a></li>
