--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,8 @@
     <meta property="og:title" content="DLOG">
     <meta property="og:image" content="logoimage/ogimage.png">
     <meta property="og:description" content="DLOG - 이명학님의 개인 블로그입니다.">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="400">
     
     <script data-ad-client="ca-pub-1940074004342489" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -106,7 +108,7 @@
             <span class="profile_arrow"><i class="fas fa-arrow-right"></i></span>
             <p>안녕하세요. 반갑습니다!</p>
             <p>이명학입니다.</p>
-            <p>저에 대해 자세히 알고 싶으시다면</br>마우스를 우측 상단에 있는 화살표 위에 올려주세요.</p>
+            <p>저에 대해 자세히 알고 싶으시다면</br>마우스를 화살표 위에 올려주세요.</p>
 
             <div class="profile_detail">
                 <div class="profile_detail__text1 flex">
