--- a/notice-detail-13.html
+++ b/notice-detail-13.html
@@ -14,7 +14,7 @@
     <!-- 메타태그정보 //-->
     <!-- META -->
     <link rel="canonical" href="https://blog.hailrain.site" />
-    <meta name="subject" content="MySQL) 문자열 합치기 CONCAT" />
+    <meta name="subject" content="게시판 이용 수칙" />
     <meta name="title" content="DLOG" />
     <meta name="keywords" content="HTML, CSS, JAVASCRIPT, JAVA, SPRING, MySQL, 리눅스, 리액트" />
     <meta name="copyright" content="DLOG" />
@@ -23,14 +23,8 @@
     <!-- OPENGRAPH -->
     <meta property="og:site_name" content="DLOG" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="MySQL) 문자열 합치기 CONCAT" />
-    <meta property="og:description" content=" CONCAT
-MySql
-CONCAT문자열
-
- 문자열
-
-" />
+    <meta property="og:title" content="게시판 이용 수칙" />
+    <meta property="og:description" content="각 게시판에 맞는 글을 작성해 주세요" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image" content="/logoimage/logo.png" />
     <meta property="og:image:alt" content="blog.hailrain.site" />
@@ -41,30 +35,18 @@ CONCAT문자열
     <meta property="og:url" content="https://blog.hailrain.site" />
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MySQL) 문자열 합치기 CONCAT" />
+    <meta name="twitter:title" content="게시판 이용 수칙" />
     <meta name="twitter:site" content="@DLOG" />
     <meta name="twitter:creator" content="@DLOG" />
     <meta name="twitter:image" content="logoimage/logo.png">
-    <meta name="twitter:description" content=" CONCAT
-MySql
-CONCAT문자열
-
- 문자열
-
-" />
+    <meta name="twitter:description" content="각 게시판에 맞는 글을 작성해 주세요" />
     <!-- GOOGLE+ -->
     <meta itemprop="headline" content="DLOG" />
     <meta itemprop="name" content="DLOG" />
-    <meta itemprop="description" content=" CONCAT
-MySql
-CONCAT문자열
-
- 문자열
-
-" />
+    <meta itemprop="description" content="각 게시판에 맞는 글을 작성해 주세요" />
     <meta itemprop="image" content="/logoimage/logo.png" />
 
-    <title>MySQL) 문자열 합치기 CONCAT | DLOG | ARTICLE DETAIL</title>
+    <title>게시판 이용 수칙 | DLOG | ARTICLE DETAIL</title>
     
     
     <script data-ad-client="ca-pub-1940074004342489" async
@@ -154,32 +136,26 @@ CONCAT문자열
 
     <section class="article main-con flex flex-dir-col">
         <div class="article__title-bar flex flex-jc-s-bet flex-ai-c">
-            <div class="article_id flex-basis-50px">3</div>
-            <div class="article_title flex-grow-1">MySQL) 문자열 합치기 CONCAT</div>
+            <div class="article_id flex-basis-50px">13</div>
+            <div class="article_title flex-grow-1">게시판 이용 수칙</div>
             <div class="article_writer flex-basis-100px"><i class="fas fa-user"></i>이명학
             </div>
-            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2020-12-17 15:25:02
+            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-01-05 21:30:14
             </div>
-            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>2</div>
+            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>3</div>
             <div class="article_recommend flex-basis-50px"><i
                     class="fas fa-thumbs-up"></i>0</div>
             <div class="article_comments flex-basis-50px">
                 <i class="fas fa-comment"></i>0
             </div>    
         </div>
-        <div id="viewer" class="article_body flex-grow-1"># CONCAT
-```MySql
-CONCAT('문','자','열')
-```
--> '문자열'
-
-</div>
+        <div id="viewer" class="article_body flex-grow-1">각 게시판에 맞는 글을 작성해 주세요.</div>
 
         <div id="disqus_thread"></div>
         <script>
             var disqus_config = function () {
-				        this.page.url = 'https://blog.hailrain.site/it-detail-3.html';
-				        this.page.identifier = 'it-detail-3.html';
+				        this.page.url = 'https://blog.hailrain.site/notice-detail-13.html';
+				        this.page.identifier = 'notice-detail-13.html';
 				    };
             (function () { // DON'T EDIT BELOW THIS LINE
                 var d = document, s = d.createElement('script');
@@ -192,14 +168,14 @@ CONCAT('문','자','열')
                 Disqus.</a></noscript>
 
         <div class="article-move-button">
-            <div class="con next-article"><a href="it-detail-4.html">다음글</a></div><div class="con next-article"><a href="it-detail-2.html">이전글</a></div>
+            <div class="con next-article"><a href="notice-detail-12.html">이전글</a></div>
 
         </div>
     </section>
 
     <section class="main-con article-list">
         <section class="title-bar">
-            <h1 class="title-bar__title-box flex flex-jc-c"><span>IT 게시판</span></h1>
+            <h1 class="title-bar__title-box flex flex-jc-c"><span>공지사항 게시판</span></h1>
         </section>
         <section class="board-list">
             <table class="width-100p">
@@ -211,7 +187,7 @@ CONCAT('문','자','열')
                     <td class="font-bold cell-hit">조회 수</td>
                     <td class="font-bold cell-recommend">추천 수</td>
                 </tr>
-                <tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">7</td><td class="cell-title"><a href="it-detail-7.html">JAVASCRIPT) replace를 replaceAll처럼 사용하기</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-21 21:55:28</td><td class="cell-hit">1</td><td class="cell-recommend">0</td></tr><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">6</td><td class="cell-title"><a href="it-detail-6.html">HTML,CSS) box-sizing 속성</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-21 21:45:32</td><td class="cell-hit">2</td><td class="cell-recommend">0</td></tr><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">5</td><td class="cell-title"><a href="it-detail-5.html">자바) 폴더와 하위파일 삭제하는 메소드</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-20 09:06:01</td><td class="cell-hit">2</td><td class="cell-recommend">0</td></tr><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">4</td><td class="cell-title"><a href="it-detail-4.html">MySQL) INNER JOIN</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-17 15:25:02</td><td class="cell-hit">2</td><td class="cell-recommend">0</td></tr><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id"> &gt; </td><td class="cell-title"><a href="it-detail-3.html">MySQL) 문자열 합치기 CONCAT</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-17 15:25:02</td><td class="cell-hit">2</td><td class="cell-recommend">0</td></tr><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">2</td><td class="cell-title"><a href="it-detail-2.html">자바) 배열 정렬하는 식</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-17 15:25:02</td><td class="cell-hit">2</td><td class="cell-recommend">0</td></tr><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">1</td><td class="cell-title"><a href="it-detail-1.html">자바) Switch 구문</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-17 13:28:21</td><td class="cell-hit">2</td><td class="cell-recommend">0</td></tr>
+                <tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id"> &gt; </td><td class="cell-title"><a href="notice-detail-13.html">게시판 이용 수칙</td><td class="cell-writer">이명학</td><td class="cell-regDate">2021-01-05 21:30:14</td><td class="cell-hit">3</td><td class="cell-recommend">0</td></tr><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">12</td><td class="cell-title"><a href="notice-detail-12.html">공지사항입니다. 😄</td><td class="cell-writer">이명학</td><td class="cell-regDate">2020-12-21 09:34:32</td><td class="cell-hit">2</td><td class="cell-recommend">0</td></tr>
             </table>
         </section>
         <div class="main-con flex-grow-1"></div>
