--- a/it-detail-15.html
+++ b/it-detail-15.html
@@ -14,7 +14,7 @@
     <!-- 메타태그정보 //-->
     <!-- META -->
     <link rel="canonical" href="https://blog.hailrain.site" />
-    <meta name="subject" content="MySQL) 문자열 합치기 CONCAT" />
+    <meta name="subject" content="Vue) Array.prototype.filter()" />
     <meta name="title" content="DLOG" />
     <meta name="keywords" content="HTML, CSS, JAVASCRIPT, JAVA, SPRING, MySQL, 리눅스, 리액트" />
     <meta name="copyright" content="DLOG" />
@@ -23,12 +23,18 @@
     <!-- OPENGRAPH -->
     <meta property="og:site_name" content="DLOG" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="MySQL) 문자열 합치기 CONCAT" />
-    <meta property="og:description" content=" CONCAT
-MySql
-CONCAT문자열
+    <meta property="og:title" content="Vue) Array.prototype.filter()" />
+    <meta property="og:description" content="filter 메소드는 주어진 함수의 테스트를 통과하는 모든 요소를 모아 새로운 배열로 반환합니다
 
- 문자열
+javascript
+arrayfilterfunctionrowindex 
+  return row  10
+
+ row 는 처리할 요소 index 는 현재 처리할 요소의 인덱스
+
+ filter 메소드는 다음과 같이 사용할 수도 있다
+arrayfilterrowindex  
+  return row  10
 
 " />
     <meta property="og:locale" content="ko_KR" />
@@ -41,30 +47,42 @@ CONCAT문자열
     <meta property="og:url" content="https://blog.hailrain.site" />
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MySQL) 문자열 합치기 CONCAT" />
+    <meta name="twitter:title" content="Vue) Array.prototype.filter()" />
     <meta name="twitter:site" content="@DLOG" />
     <meta name="twitter:creator" content="@DLOG" />
     <meta name="twitter:image" content="logoimage/logo.png">
-    <meta name="twitter:description" content=" CONCAT
-MySql
-CONCAT문자열
+    <meta name="twitter:description" content="filter 메소드는 주어진 함수의 테스트를 통과하는 모든 요소를 모아 새로운 배열로 반환합니다
 
- 문자열
+javascript
+arrayfilterfunctionrowindex 
+  return row  10
+
+ row 는 처리할 요소 index 는 현재 처리할 요소의 인덱스
+
+ filter 메소드는 다음과 같이 사용할 수도 있다
+arrayfilterrowindex  
+  return row  10
 
 " />
     <!-- GOOGLE+ -->
     <meta itemprop="headline" content="DLOG" />
     <meta itemprop="name" content="DLOG" />
-    <meta itemprop="description" content=" CONCAT
-MySql
-CONCAT문자열
+    <meta itemprop="description" content="filter 메소드는 주어진 함수의 테스트를 통과하는 모든 요소를 모아 새로운 배열로 반환합니다
 
- 문자열
+javascript
+arrayfilterfunctionrowindex 
+  return row  10
+
+ row 는 처리할 요소 index 는 현재 처리할 요소의 인덱스
+
+ filter 메소드는 다음과 같이 사용할 수도 있다
+arrayfilterrowindex  
+  return row  10
 
 " />
     <meta itemprop="image" content="/logoimage/logo.png" />
 
-    <title>MySQL) 문자열 합치기 CONCAT | DLOG | ARTICLE DETAIL</title>
+    <title>Vue) Array.prototype.filter() | DLOG | ARTICLE DETAIL</title>
     
     
     <script data-ad-client="ca-pub-1940074004342489" async
@@ -180,32 +198,38 @@ href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.cs
 
     <section class="article main-con flex flex-dir-col">
         <div class="article__title-bar flex flex-jc-s-bet flex-ai-c">
-            <div class="article_id flex-basis-50px">3</div>
-            <div class="article_title flex-grow-1">MySQL) 문자열 합치기 CONCAT</div>
+            <div class="article_id flex-basis-50px">15</div>
+            <div class="article_title flex-grow-1">Vue) Array.prototype.filter()</div>
             <div class="article_writer flex-basis-100px"><i class="fas fa-user"></i>이명학
             </div>
-            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2020-12-17 15:25:02
+            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-01-06 10:40:09
             </div>
-            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>3</div>
+            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>4</div>
             <div class="article_recommend flex-basis-50px"><i
                     class="fas fa-thumbs-up"></i>0</div>
             <div class="article_comments flex-basis-50px">
                 <i class="fas fa-comment"></i>0
             </div>    
         </div>
-        <div id="viewer" class="article_body flex-grow-1"># CONCAT
-```MySql
-CONCAT('문','자','열')
-```
--> '문자열'
+        <div id="viewer" class="article_body flex-grow-1">filter() 메소드는 주어진 함수의 테스트를 통과하는 모든 요소를 모아 새로운 배열로 반환합니다.
 
-</div>
+```javascript
+array.filter(function(row,index) {
+  return row > 10;
+});
+// row 는 처리할 요소, index 는 현재 처리할 요소의 인덱스
+
+// filter() 메소드는 다음과 같이 사용할 수도 있다.
+array.filter((row,index) => {
+  return row > 10;
+});
+```</div>
 
         <div id="disqus_thread"></div>
         <script>
             var disqus_config = function () {
-				        this.page.url = 'https://blog.hailrain.site/it-detail-3.html';
-				        this.page.identifier = 'it-detail-3.html';
+				        this.page.url = 'https://blog.hailrain.site/it-detail-15.html';
+				        this.page.identifier = 'it-detail-15.html';
 				    };
             (function () { // DON'T EDIT BELOW THIS LINE
                 var d = document, s = d.createElement('script');
@@ -218,7 +242,7 @@ CONCAT('문','자','열')
                 Disqus.</a></noscript>
 
         <div class="article-move-button">
-            <div class="con next-article"><a href="it-detail-4.html">다음글</a></div><div class="con next-article"><a href="it-detail-2.html">이전글</a></div>
+            <div class="con next-article"><a href="it-detail-16.html">다음글</a></div><div class="con next-article"><a href="it-detail-14.html">이전글</a></div>
 
         </div>
     </section>
