--- a/article-detail-19.html
+++ b/article-detail-19.html
@@ -14,7 +14,7 @@
     <!-- 메타태그정보 //-->
     <!-- META -->
     <link rel="canonical" href="https://blog.hailrain.site" />
-    <meta name="subject" content="공지사항입니다. 😀" />
+    <meta name="subject" content="JAVASCRIPT) select태그 option 선택하는 자바스크립트" />
     <meta name="title" content="DLOG" />
     <meta name="keywords" content="HTML, CSS, JAVASCRIPT, JAVA, SPRING, MySQL, 리눅스, 리액트" />
     <meta name="copyright" content="DLOG" />
@@ -23,8 +23,35 @@
     <!-- OPENGRAPH -->
     <meta property="og:site_name" content="DLOG" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="공지사항입니다. 😀" />
-    <meta property="og:description" content="앞으로 풀스택 개발 관련 글이 올라옵니다
+    <meta property="og:title" content="JAVASCRIPT) select태그 option 선택하는 자바스크립트" />
+    <meta property="og:description" content="select태그의 option 태그 선택하는 자바스크립트 메소드
+  select 태그는 display  none 으로 숨기고 ul태그 이용하여 꾸민다
+ HTML
+HTML
+            ul classselectmenu
+				li onclicksearchContentthis제목li
+				li onclicksearchContentthis내용li
+				li onclicksearchContentthis제목내용li
+				li onclicksearchContentthis글쓴이li
+			ul
+
+			select namesearchType idsearchselect
+				option valuetitle제목option
+				option valuebody내용option
+				option valuetitleandbody제목내용option
+				option valuewriter글쓴이option
+			select
+
+
+ JAVASCRIPT
+JAVASCRIPT
+function searchContente
+	const selectedIndex  selectmenu  liindexe
+	searchselect optioneqselectedIndexpropselectedtrue	
+	selectmenucssdisplaynone
+	const selectedText  etext	
+	searchcontenttextselectedText
+
 " />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image" content="/logoimage/logo.png" />
@@ -36,20 +63,74 @@
     <meta property="og:url" content="https://blog.hailrain.site" />
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="공지사항입니다. 😀" />
+    <meta name="twitter:title" content="JAVASCRIPT) select태그 option 선택하는 자바스크립트" />
     <meta name="twitter:site" content="@DLOG" />
     <meta name="twitter:creator" content="@DLOG" />
     <meta name="twitter:image" content="logoimage/logo.png">
-    <meta name="twitter:description" content="앞으로 풀스택 개발 관련 글이 올라옵니다
+    <meta name="twitter:description" content="select태그의 option 태그 선택하는 자바스크립트 메소드
+  select 태그는 display  none 으로 숨기고 ul태그 이용하여 꾸민다
+ HTML
+HTML
+            ul classselectmenu
+				li onclicksearchContentthis제목li
+				li onclicksearchContentthis내용li
+				li onclicksearchContentthis제목내용li
+				li onclicksearchContentthis글쓴이li
+			ul
+
+			select namesearchType idsearchselect
+				option valuetitle제목option
+				option valuebody내용option
+				option valuetitleandbody제목내용option
+				option valuewriter글쓴이option
+			select
+
+
+ JAVASCRIPT
+JAVASCRIPT
+function searchContente
+	const selectedIndex  selectmenu  liindexe
+	searchselect optioneqselectedIndexpropselectedtrue	
+	selectmenucssdisplaynone
+	const selectedText  etext	
+	searchcontenttextselectedText
+
 " />
     <!-- GOOGLE+ -->
     <meta itemprop="headline" content="DLOG" />
     <meta itemprop="name" content="DLOG" />
-    <meta itemprop="description" content="앞으로 풀스택 개발 관련 글이 올라옵니다
+    <meta itemprop="description" content="select태그의 option 태그 선택하는 자바스크립트 메소드
+  select 태그는 display  none 으로 숨기고 ul태그 이용하여 꾸민다
+ HTML
+HTML
+            ul classselectmenu
+				li onclicksearchContentthis제목li
+				li onclicksearchContentthis내용li
+				li onclicksearchContentthis제목내용li
+				li onclicksearchContentthis글쓴이li
+			ul
+
+			select namesearchType idsearchselect
+				option valuetitle제목option
+				option valuebody내용option
+				option valuetitleandbody제목내용option
+				option valuewriter글쓴이option
+			select
+
+
+ JAVASCRIPT
+JAVASCRIPT
+function searchContente
+	const selectedIndex  selectmenu  liindexe
+	searchselect optioneqselectedIndexpropselectedtrue	
+	selectmenucssdisplaynone
+	const selectedText  etext	
+	searchcontenttextselectedText
+
 " />
     <meta itemprop="image" content="/logoimage/logo.png" />
 
-    <title>공지사항입니다. 😀 | DLOG | ARTICLE DETAIL</title>
+    <title>JAVASCRIPT) select태그 option 선택하는 자바스크립트 | DLOG | ARTICLE DETAIL</title>
     
     <!-- GOOGLE ADSENSE -->
     <script data-ad-client="ca-pub-1940074004342489" async
@@ -133,27 +214,54 @@ href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.cs
 
     <section class="article main-con flex flex-dir-col">
         <div class="article__title-bar flex flex-jc-s-bet flex-ai-c">
-            <div class="article_id flex-basis-50px">8</div>
-            <div class="article_title flex-grow-1">공지사항입니다. 😀</div>
+            <div class="article_id flex-basis-50px">19</div>
+            <div class="article_title flex-grow-1">JAVASCRIPT) select태그 option 선택하는 자바스크립트</div>
             <div class="article_writer flex-basis-100px"><i class="fas fa-user"></i>이명학
             </div>
-            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-01-14 09:14:34
+            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-01-27 10:08:54
             </div>
-            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>1</div>
+            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>0</div>
             <div class="article_recommend flex-basis-50px"><i
                     class="fas fa-thumbs-up"></i>0</div>
             <div class="article_comments flex-basis-50px">
                 <i class="fas fa-comment"></i>0
             </div>    
         </div>
-        <div id="viewer" class="article_body flex-grow-1">앞으로 풀스택 개발 관련 글이 올라옵니다.
-😀😀</div>
+        <div id="viewer" class="article_body flex-grow-1">#select태그의 option 태그 선택하는 자바스크립트 메소드
+ - select 태그는 display : none 으로 숨기고 ul태그 이용하여 꾸민다.
+## HTML
+```HTML
+            <ul class="selectmenu">
+				<li onclick="searchContent(this);">제목</li>
+				<li onclick="searchContent(this);">내용</li>
+				<li onclick="searchContent(this);">제목+내용</li>
+				<li onclick="searchContent(this);">글쓴이</li>
+			</ul>
+
+			<select name="searchType" id="searchselect">
+				<option value="title">제목</option>
+				<option value="body">내용</option>
+				<option value="titleandbody">제목+내용</option>
+				<option value="writer">글쓴이</option>
+			</select>
+```
+
+## JAVASCRIPT
+```JAVASCRIPT
+function searchContent(e){
+	const selectedIndex = ($('.selectmenu > li').index(e));
+	$('#searchselect option:eq('+selectedIndex+')').prop("selected",true);	
+	$('.selectmenu').css('display','none');
+	const selectedText = $(e).text();	
+	$('.searchcontent').text(selectedText);
+}
+```</div>
         <div class="article_tags"></div>
         <div id="disqus_thread"></div>
         <script>
             var disqus_config = function () {
-				        this.page.url = 'https://blog.hailrain.site/notice-detail-8.html';
-				        this.page.identifier = 'notice-detail-8.html';
+				        this.page.url = 'https://blog.hailrain.site/it-detail-19.html';
+				        this.page.identifier = 'it-detail-19.html';
 				    };
             (function () { // DON'T EDIT BELOW THIS LINE
                 var d = document, s = d.createElement('script');
@@ -166,13 +274,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.cs
                 Disqus.</a></noscript>
 
         <div class="article-move-vue article-move-button">
-            <div class="con next-article"><a :href="'article-detail-9.html?board=notice&page='+currentPage">다음글</a></div>
+            <div class="con next-article"><a :href="'article-detail-18.html?board=it&page='+currentPage">이전글</a></div>
 
         </div>
     </section>
 
     <section class="title-bar">
-        <h1 class="title-bar__title-box flex flex-jc-c"><a href="notice-list.html?board=notice"><span>공지사항 게시판</span></a></h1>
+        <h1 class="title-bar__title-box flex flex-jc-c"><a href="it-list.html?board=it"><span>IT 게시판</span></a></h1>
     </section>
     <section class="article-list-wrap main-con article-list">        
         <div class="searchBox">
@@ -191,7 +299,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.cs
                     <td class="font-bold cell-hit">조회 수</td>
                     <td class="font-bold cell-recommend">추천 수</td>
                 </tr>
-                <tbody class="articles_notExists"><tr><td colspan="6">검색 결과가 없습니다.</td></tr></tbody><tbody class="articles_exists" v-for="article in articles"><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">{{article.id}}</td><td class="cell-title"><a :href="'article-detail-'+article.id+'.html?board=notice&id='+article.id+'&page='+currentPage">{{article.title}}</a></td><td class="cell-writer">{{article.writer}}</td><td class="cell-regDate">{{article.regDate}}</td><td class="cell-hit">{{article.hitCount}}</td><td class="cell-recommend">{{article.likesCount}}</td></tr></tbody>
+                <tbody class="articles_notExists"><tr><td colspan="6">검색 결과가 없습니다.</td></tr></tbody><tbody class="articles_exists" v-for="article in articles"><tr class ="line-separate"><td colspan="6"></td></tr><tr><td class="cell-id">{{article.id}}</td><td class="cell-title"><a :href="'article-detail-'+article.id+'.html?board=it&id='+article.id+'&page='+currentPage">{{article.title}}</a></td><td class="cell-writer">{{article.writer}}</td><td class="cell-regDate">{{article.regDate}}</td><td class="cell-hit">{{article.hitCount}}</td><td class="cell-recommend">{{article.likesCount}}</td></tr></tbody>
             </table>
         </section>
         
