--- a/article-detail-22.html
+++ b/article-detail-22.html
@@ -14,7 +14,7 @@
     <!-- 메타태그정보 //-->
     <!-- META -->
     <link rel="canonical" href="https://blog.hailrain.site" />
-    <meta name="subject" content="Vue) Array.prototype.some()" />
+    <meta name="subject" content="JAVASCRIPT) SCRIPT태그와 자바스크립트 실행순서" />
     <meta name="title" content="DLOG" />
     <meta name="keywords" content="HTML, CSS, JAVASCRIPT, JAVA, SPRING, MySQL, 리눅스, 리액트" />
     <meta name="copyright" content="DLOG" />
@@ -23,19 +23,10 @@
     <!-- OPENGRAPH -->
     <meta property="og:site_name" content="DLOG" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Vue) Array.prototype.some()" />
-    <meta property="og:description" content="SOME 메서드는 배열 안의 어떤 요소라도 주어진 판별 함수를 통과하는지 테스트합니다
-javascript
-arraysomefunctionrow i 
-  return row  15
-
- row 는 처리할 요소 index 는 현재 처리할 요소의 인덱스
-
- some 메소드는 다음과 같이 사용할 수도 있다
-arraysomerowindex  
-  return row  10
-
-" />
+    <meta property="og:title" content="JAVASCRIPT) SCRIPT태그와 자바스크립트 실행순서" />
+    <meta property="og:description" content=" SCRIPT 태그와 자바스크립트 실행순서
+script태그에 defer명령어를 넣으면 htmlcss등의 파일들을 먼저 불러온 후 script태그가 실행된다
+script태그에 async명령어를 넣으면 htmlcss등의 파일들이 다 불러와지지 않았을 때에도 실행된다" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image" content="/logoimage/logo.png" />
     <meta property="og:image:alt" content="blog.hailrain.site" />
@@ -46,40 +37,22 @@ arraysomerowindex
     <meta property="og:url" content="https://blog.hailrain.site" />
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Vue) Array.prototype.some()" />
+    <meta name="twitter:title" content="JAVASCRIPT) SCRIPT태그와 자바스크립트 실행순서" />
     <meta name="twitter:site" content="@DLOG" />
     <meta name="twitter:creator" content="@DLOG" />
     <meta name="twitter:image" content="logoimage/logo.png">
-    <meta name="twitter:description" content="SOME 메서드는 배열 안의 어떤 요소라도 주어진 판별 함수를 통과하는지 테스트합니다
-javascript
-arraysomefunctionrow i 
-  return row  15
-
- row 는 처리할 요소 index 는 현재 처리할 요소의 인덱스
-
- some 메소드는 다음과 같이 사용할 수도 있다
-arraysomerowindex  
-  return row  10
-
-" />
+    <meta name="twitter:description" content=" SCRIPT 태그와 자바스크립트 실행순서
+script태그에 defer명령어를 넣으면 htmlcss등의 파일들을 먼저 불러온 후 script태그가 실행된다
+script태그에 async명령어를 넣으면 htmlcss등의 파일들이 다 불러와지지 않았을 때에도 실행된다" />
     <!-- GOOGLE+ -->
     <meta itemprop="headline" content="DLOG" />
     <meta itemprop="name" content="DLOG" />
-    <meta itemprop="description" content="SOME 메서드는 배열 안의 어떤 요소라도 주어진 판별 함수를 통과하는지 테스트합니다
-javascript
-arraysomefunctionrow i 
-  return row  15
-
- row 는 처리할 요소 index 는 현재 처리할 요소의 인덱스
-
- some 메소드는 다음과 같이 사용할 수도 있다
-arraysomerowindex  
-  return row  10
-
-" />
+    <meta itemprop="description" content=" SCRIPT 태그와 자바스크립트 실행순서
+script태그에 defer명령어를 넣으면 htmlcss등의 파일들을 먼저 불러온 후 script태그가 실행된다
+script태그에 async명령어를 넣으면 htmlcss등의 파일들이 다 불러와지지 않았을 때에도 실행된다" />
     <meta itemprop="image" content="/logoimage/logo.png" />
 
-    <title>Vue) Array.prototype.some() | DLOG | ARTICLE DETAIL</title>
+    <title>JAVASCRIPT) SCRIPT태그와 자바스크립트 실행순서 | DLOG | ARTICLE DETAIL</title>
     
     <!-- GOOGLE ADSENSE -->
     <script data-ad-client="ca-pub-1940074004342489" async
@@ -163,37 +136,28 @@ href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.cs
 
     <section class="article main-con flex flex-dir-col">
         <div class="article__title-bar flex flex-jc-s-bet flex-ai-c">
-            <div class="article_id flex-basis-50px">12</div>
-            <div class="article_title flex-grow-1">Vue) Array.prototype.some()</div>
+            <div class="article_id flex-basis-50px">22</div>
+            <div class="article_title flex-grow-1">JAVASCRIPT) SCRIPT태그와 자바스크립트 실행순서</div>
             <div class="article_writer flex-basis-100px"><i class="fas fa-user"></i>이명학
             </div>
-            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-01-14 09:16:45
+            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-02-17 15:57:06
             </div>
-            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>2</div>
+            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>1</div>
             <div class="article_recommend flex-basis-50px"><i
                     class="fas fa-thumbs-up"></i>0</div>
             <div class="article_comments flex-basis-50px">
                 <i class="fas fa-comment"></i>0
             </div>    
         </div>
-        <div id="viewer" class="article_body flex-grow-1">SOME() 메서드는 배열 안의 어떤 요소라도 주어진 판별 함수를 통과하는지 테스트합니다.
-```javascript
-array.some(function(row, i) {
-  return row == 15;
-});
-// row 는 처리할 요소, index 는 현재 처리할 요소의 인덱스
-
-// some() 메소드는 다음과 같이 사용할 수도 있다.
-array.some((row,index) => {
-  return row > 10;
-});
-```</div>
-        <div class="article_tags"><a href="article_tag.html?tag=JAVASCRIPT&page=1">#JAVASCRIPT </a><a href="article_tag.html?tag=VUE&page=1">#VUE </a></div>
+        <div id="viewer" class="article_body flex-grow-1"># SCRIPT 태그와 자바스크립트 실행순서
+script태그에 defer명령어를 넣으면 html,css등의 파일들을 먼저 불러온 후 script태그가 실행된다.
+script태그에 async명령어를 넣으면 html,css등의 파일들이 다 불러와지지 않았을 때에도 실행된다.</div>
+        <div class="article_tags"></div>
         <div id="disqus_thread"></div>
         <script>
             var disqus_config = function () {
-				        this.page.url = 'https://blog.hailrain.site/it-detail-12.html';
-				        this.page.identifier = 'it-detail-12.html';
+				        this.page.url = 'https://blog.hailrain.site/it-detail-22.html';
+				        this.page.identifier = 'it-detail-22.html';
 				    };
             (function () { // DON'T EDIT BELOW THIS LINE
                 var d = document, s = d.createElement('script');
@@ -206,7 +170,7 @@ array.some((row,index) => {
                 Disqus.</a></noscript>
 
         <div class="article-move-vue article-move-button">
-            <div class="con next-article"><a :href="'article-detail-13.html?board=it&page='+currentPage">다음글</a></div><div class="con next-article"><a :href="'article-detail-11.html?board=it&page='+currentPage">이전글</a></div>
+            <div class="con next-article"><a :href="'article-detail-21.html?board=it&page='+currentPage">이전글</a></div>
 
         </div>
     </section>
